force-app/main/default/objects/Github_Notification__c/Github_Notification__c.object-meta.xml
<CustomObject>
    <label>Github Notification</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Github Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Github Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>