force-app/main/default/objects/Github_Notification__c/fields/Added_Component__c.field-meta.xml
<CustomField>
    <fullName>Added_Component__c</fullName>
    <label>Added Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>