force-app/main/default/objects/Github_Notification__c/fields/Committer__c.field-meta.xml
<CustomField>
    <fullName>Committer__c</fullName>
    <label>Committer Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>