force-app/main/default/objects/Github_Notification__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Committer Email</inlineHelpText>
    <label>Committer Email</label>
    <type>Email</type>
</CustomField>