force-app/main/default/objects/Github_Notification__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Commit Message</description>
    <inlineHelpText>Commit Message</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>