force-app/main/default/objects/Github_Notification__c/fields/Modified_Component__c.field-meta.xml
<CustomField>
    <fullName>Modified_Component__c</fullName>
    <label>Modified Component</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>