force-app/main/default/objects/Github_Notification__c/fields/Removed_Component__c.field-meta.xml
<CustomField>
    <fullName>Removed_Component__c</fullName>
    <label>Removed Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>