force-app/main/default/objects/Github_Notification__c/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <label>Repository Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>