force-app/main/default/objects/Github_Notification__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Commit Timestamp</description>
    <inlineHelpText>Commit Timestamp</inlineHelpText>
    <label>Timestamp</label>
    <length>90</length>
    <type>Text</type>
</CustomField>