force-app/main/default/objects/Github_Notification__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Commit URL</description>
    <inlineHelpText>Commit URL</inlineHelpText>
    <label>URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>